<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:id="@+id/menu_group">
            <item
                android:id="@+id/menu_item_usuarios"
                android:checked="true"
                android:icon="@android:drawable/ic_menu_my_calendar"
                android:title="@string/usuarios"
                app:showAsAction="ifRoom|withText" />
            <item
                android:id="@+id/menu_item_sobre"
                android:checked="false"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/sobre"
                app:showAsAction="withText" />
            <item
                android:id="@+id/menu_item_sair"
                android:checkable="false"
                android:checked="false"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/sair"
                app:showAsAction="withText" />
        </group>
</menu>