<?xml version="1.0" encoding="utf-8"?>
<!--LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<android.widget.RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:contentDescription="Icone do tipo de serviço"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/presence_away" />

            <TextView
                android:id="@+id/textViewNome"
                android:layout_width="297dp"
                android:layout_height="29dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/instala_o_de_roteador_wifi"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCargo"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/jd_cristo_rei_ii"
                app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
                app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

            <TextView
                android:id="@+id/textViewCidade"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/corn_lio_proc_pio"
                app:layout_constraintStart_toEndOf="@+id/textViewCargo"
                app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/common_google_signin_btn_text_light_disabled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewIcon">

                <TextView
                    android:id="@+id/textViewStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/em_andamento"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:text="@string/_12_04"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewStatus"
                    app:layout_constraintStart_toEndOf="@+id/textViewStatus" />

                <TextView
                    android:id="@+id/textViewHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/_16_00"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewData"
                    app:layout_constraintStart_toEndOf="@+id/textViewData" />

                <TextView
                    android:id="@+id/textViewDistancia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/_3km"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewHora"
                    app:layout_constraintEnd_toEndOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.widget.RelativeLayout>